--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/form-data": "^2.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.22",
+    "@types/node-fetch": "2",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^8.11.0",
@@ -29,10 +30,9 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "@types/node-fetch": "^2.6.1",
     "config": "^3.3.7",
     "dotenv": "^16.0.0",
     "form-data": "^4.0.0",
-    "node-fetch": "^3.2.3"
+    "node-fetch": "2"
   }
 }
