--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "sourceMap": true,
     "outDir": "./dist",
     "types": ["node", "jest"],
-    "lib": ["ES6", "DOM"]
+    "lib": ["ES6"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "**/*.test.ts"]
