--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "chromiumly",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A lightweight Typescrpit library which interacts with Gotenberg's Chromium module to convert HTML documents to PDF.",
   "main": "dist/main.js",
+  "types": "dist/main.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/cherfia/chromiumly.git"
