--- a/package.json
+++ b/package.json
@@ -28,17 +28,23 @@
   "scripts": {
     "clean": "rm -rf dist build",
     "lint": "eslint src/ --ext .js,.ts",
-    "build": "yarn clean && tsc -p tsconfig.json"
+    "build": "yarn clean && tsc -p tsconfig.json",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.16.7",
     "@types/config": "^0.0.41",
     "@types/dotenv": "^8.2.0",
     "@types/form-data": "^2.5.0",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.22",
     "@types/node-fetch": "2",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^8.11.0",
+    "jest": "^27.5.1",
+    "jest-junit": "^13.0.0",
+    "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
