--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chromiumly",
-  "version": "2.0.3",
-  "description": "A lightweight Typescrpit library which interacts with Gotenberg's different modules to convert a variety of document formats to PDF files.",
+  "version": "2.0.4",
+  "description": "A lightweight Typescript library that interacts with Gotenberg's different modules to convert a variety of document formats to PDF files.",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
   "files": [
