--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     "typescript": "4.8.4"
   },
   "dependencies": {
-    "config": "^3.3.7",
-    "dotenv": "^16.0.2",
-    "form-data": "^4.0.0",
+    "config": "3.3.8",
+    "dotenv": "16.0.3",
+    "form-data": "4.0.0",
     "node-fetch": "2"
   }
 }
