feat: add tslib

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest-junit": "16.0.0",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
+    "tslib": "2.6.1",
     "typescript": "5.1.6"
   },
   "dependencies": {
