--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
           node-version: "16.x"
           registry-url: "https://registry.npmjs.org"
       - run: yarn
+      - run: yarn lint
       - run: yarn build
       - run: yarn test
       - name: Upload coverage to Codecov
