--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,16 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "16.x"
+          node-version: "18.x"
           registry-url: "https://registry.npmjs.org"
+      - name: Install commitlint
+        run: yarn add commitlint@latest conventional-changelog-conventionalcommits
+      - name: Validate current and last commits
+        if: github.event_name == 'push'
+        run: npx commitlint --from $(git rev-parse --short HEAD^1) --to $(git rev-parse --short HEAD) --verbose
+      - name: Validate pull requests
+        if: github.event_name == 'pull_request'
+        run: npx commitlint --from ${{ github.event.pull_request.head.sha }}~${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.head.sha }} --verbose
       - run: yarn
       - run: yarn lint
       - run: yarn build
