--- a/package.json
+++ b/package.json
@@ -29,10 +29,19 @@
     "clean": "rm -rf dist build",
     "lint": "eslint src/ --ext .js,.ts",
     "build": "yarn clean && tsc -p tsconfig.json",
-    "test": "jest --runInBand --ci --coverage --reporters=default --reporters=jest-junit"
+    "test": "jest --runInBand --ci --coverage --reporters=default --reporters=jest-junit",
+    "commit": "git-cz"
+  },
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/cz-commitlint"
+    }
   },
   "devDependencies": {
     "@babel/preset-typescript": "7.23.3",
+    "@commitlint/cli": "18.4.3",
+    "@commitlint/config-conventional": "18.4.3",
+    "@commitlint/cz-commitlint": "^18.4.3",
     "@types/config": "3.3.3",
     "@types/dotenv": "8.2.0",
     "@types/form-data": "2.5.0",
@@ -41,7 +50,10 @@
     "@types/node-fetch": "2.6.9",
     "@typescript-eslint/eslint-plugin": "6.12.0",
     "@typescript-eslint/parser": "6.12.0",
+    "commitizen": "4.3.0",
     "eslint": "8.54.0",
+    "husky": "8.0.3",
+    "inquirer": "8",
     "jest": "29.7.0",
     "jest-junit": "16.0.0",
     "ts-jest": "29.1.1",
