--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - uses: actions/setup-node@v4
         with:
-          node-version: "16.x"
+          node-version: "18.x"
           registry-url: "https://registry.npmjs.org"
+      - name: Install commitlint
+        run: yarn add conventional-changelog-conventionalcommits commitlint@latest
+      - name: Validate commits
+        if: github.event_name == 'push'
+        run: npx commitlint --from $(git rev-parse HEAD^1) --to $(git rev-parse HEAD) --verbose
+      - name: Validate pull requests
+        if: github.event_name == 'pull_request'
+        run: npx commitlint --from ${{ github.event.pull_request.head.sha }}^${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.head.sha }} --verbose
       - run: yarn
       - run: yarn lint
       - run: yarn build
