--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "lint": "eslint src/ --ext .js,.ts",
     "build": "yarn clean && tsc -p tsconfig.json",
     "test": "jest --runInBand --ci --coverage --reporters=default --reporters=jest-junit",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "release": "release-it"
   },
   "config": {
     "commitizen": {
@@ -42,6 +43,7 @@
     "@commitlint/cli": "18.4.3",
     "@commitlint/config-conventional": "18.4.3",
     "@commitlint/cz-commitlint": "^18.4.3",
+    "@release-it/conventional-changelog": "8.0.1",
     "@types/config": "3.3.3",
     "@types/dotenv": "8.2.0",
     "@types/form-data": "2.5.0",
@@ -56,6 +58,7 @@
     "inquirer": "8",
     "jest": "29.7.0",
     "jest-junit": "16.0.0",
+    "release-it": "16.3.0",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
     "tslib": "2.6.2",
