--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,10 +23,14 @@ jobs:
       - name: Validate pull requests
         if: github.event_name == 'pull_request'
         run: npx commitlint --from ${{ github.event.pull_request.head.sha }}^${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.head.sha }} --verbose
-      - run: yarn
-      - run: yarn lint
-      - run: yarn build
-      - run: yarn test
+      - name: Install Dependencies
+        run: yarn
+      - name: Lint Code
+        run: yarn lint
+      - name: Build Code
+        run: yarn build
+      - name: Run Tests
+        run: yarn test
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
