--- a/.release-it.yml
+++ b/.release-it.yml
@@ -14,7 +14,7 @@ git:
   changelog: "npx auto-changelog --stdout --commit-limit false -u --template https://raw.githubusercontent.com/release-it/release-it/main/templates/changelog-compact.hbs"
 
 hooks:
-  before:init: ["git pull", "yarn lint", "yarn test"]
+  before:init: ["git pull", "yarn", "yarn lint", "yarn build", "yarn test"]
   after:bump: "npx auto-changelog -p && git add CHANGELOG.md"
   after:release:
     - "echo Successfully released ${name} v${version} to ${repo.repository}."
