chore: add prettier

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,6 +4,7 @@ env:
 extends:
   - eslint:recommended
   - plugin:@typescript-eslint/recommended
+  - prettier
 parser: "@typescript-eslint/parser"
 parserOptions:
   ecmaVersion: latest
