--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "build": "yarn clean && tsc -p tsconfig.json",
     "test": "jest --runInBand --ci --coverage --reporters=default --reporters=jest-junit",
     "commit": "git-cz",
-    "release": "release-it"
+    "format": "yarn prettier . -w",
+    "release": "release-it",
+    "prepare": "husky"
   },
   "config": {
     "commitizen": {
@@ -54,10 +56,13 @@
     "@typescript-eslint/parser": "7.0.2",
     "commitizen": "4.3.0",
     "eslint": "8.57.0",
-    "husky": "9.0.11",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.0.11",
     "inquirer": "8",
     "jest": "29.7.0",
     "jest-junit": "16.0.0",
+    "lint-staged": "^15.2.2",
+    "prettier": "3.2.5",
     "release-it": "17.1.1",
     "ts-jest": "29.1.2",
     "ts-node": "10.9.2",
@@ -70,5 +75,8 @@
     "file-type": "16.5.4",
     "form-data": "4.0.0",
     "node-fetch": "2.7.0"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
