--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "repository": {
     "type": "git",
