feat: make config and dotenv optional

--- a/package.json
+++ b/package.json
@@ -74,7 +74,9 @@
   },
   "dependencies": {
     "form-data": "4.0.0",
-    "node-fetch": "2.7.0",
+    "node-fetch": "2.7.0"
+  },
+  "optionalDependencies": {
     "config": "3.x",
     "dotenv": "16.x"
   },
