--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v4
         with:
-          node-version: "18.x"
+          node-version: "22"
           registry-url: "https://registry.npmjs.org"
       - name: Install commitlint
         run: yarn add conventional-changelog-conventionalcommits commitlint@latest
