docs: update README.md

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
     "lib": ["ES6"]
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "exclude": ["node_modules", "**/*.test.ts", "assets"]
 }
