chore(tsconfig): update TypeScript target and lib to ES2022

--- a/package.json
+++ b/package.json
@@ -75,6 +75,6 @@
     "dotenv": "17.x"
   },
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+    "**/*": "yarn prettier --write --ignore-unknown"
   }
 }
