chore: update yarn to 4.12.0

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,15 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
+# Yarn 4+ (Berry)
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+
 # dotenv environment variables file
 .env
 .env.test
