--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "author": "Taha Cherfia <taha.cherfia@gmail.com>",
   "license": "MIT",
+  "packageManager": "yarn@4.12.0",
   "engines": {
     "node": ">=18.x"
   },
@@ -44,6 +45,7 @@
     }
   },
   "devDependencies": {
+    "@babel/core": "7.26.0",
     "@babel/preset-typescript": "7.28.5",
     "@commitlint/cli": "^20.0.0",
     "@commitlint/config-conventional": "^20.0.0",
@@ -59,7 +61,7 @@
     "eslint": "8.57.0",
     "eslint-config-prettier": "^10.0.0",
     "husky": "^9.0.11",
-    "inquirer": "8",
+    "inquirer": "9",
     "jest": "30.2.0",
     "jest-junit": "16.0.0",
     "lint-staged": "^16.0.0",
