--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           node-version: "24"
           registry-url: "https://registry.npmjs.org"
+      - name: Enable Corepack
+        run: corepack enable
       - name: Install commitlint
         run: yarn add conventional-changelog-conventionalcommits commitlint@latest
       - name: Validate commits
@@ -27,7 +29,7 @@ jobs:
         if: github.event_name == 'pull_request'
         run: npx commitlint --from ${{ github.event.pull_request.head.sha }}^${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.head.sha }} --verbose
       - name: Install Dependencies
-        run: yarn --ignore-optional
+        run: yarn install
       - name: Lint Code
         run: yarn lint
       - name: Build Code
